--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,8 @@
-accelerate==1.2.1
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-filelock==3.16.1
-fsspec==2024.12.0
-huggingface-hub==0.27.0
-idna==3.10
-Jinja2==3.1.5
-MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.1
-packaging==24.2
-psutil==6.1.1
-pycparser==2.22
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.0
-scipy==1.15.0
-soundfile==0.13.0
-sympy==1.13.1
-tokenizers==0.21.0
-torch==2.5.1
-torchaudio==2.5.1
-tqdm==4.67.1
-transformers==4.47.1
-typing_extensions==4.12.2
-urllib3==2.3.0
+grpcio==1.59.0
+grpcio-tools==1.59.0
+torch>=2.0.0
+torchaudio>=2.0.0
+transformers>=4.34.0
+numpy>=1.24.0
+soundfile>=0.12.1
+scipy>=1.11.0
